// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooVerticalMenuComponent Rendering Should render correctly with a complex entry 1`] = `
<yoo-vertical-menu
  class="fixed hydrated"
  data-yoo-vertical-menu-host=""
>
  <!---->
  <div
    attr-layout="column"
    class="fixed-container"
    data-yoo-vertical-menu=""
  >
    <div
      class="menu-header"
      data-yoo-vertical-menu=""
    >
      <span
        data-yoo-vertical-menu=""
      >
        Menu
      </span>
      <div
        class="header-slot"
        data-yoo-vertical-menu=""
        data-yoo-vertical-menu-slot=""
      />
    </div>
    <yoo-slim-scroll
      data-yoo-vertical-menu=""
    >
      <div
        data-yoo-vertical-menu=""
      >
        <div
          class="row"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item active"
              data-yoo-vertical-menu=""
            >
              
              <span
                data-yoo-vertical-menu=""
              >
                Title
              </span>
              
            </div>
          </a>
        </div>
        <div
          class="row"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item"
              data-yoo-vertical-menu=""
            >
              
              <span
                data-yoo-vertical-menu=""
              >
                Title
              </span>
              
            </div>
          </a>
        </div>
        <div
          class="row hidden"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item"
              data-yoo-vertical-menu=""
            >
              <img
                data-yoo-vertical-menu=""
                src="./assets/grid/empty-state-1.svg"
              />
              
              <span
                data-yoo-vertical-menu=""
              >
                Title Bis
              </span>
              <i
                class="yo-arrow-dropdown"
                data-yoo-vertical-menu=""
              />
            </div>
          </a>
          <div
            class="sub-container"
            data-yoo-vertical-menu=""
          >
            <div
              class="row-subitems"
              data-yoo-vertical-menu=""
            >
              <a
                data-yoo-vertical-menu=""
              >
                <div
                  attr-layout="row"
                  class="item"
                  data-yoo-vertical-menu=""
                >
                  
                  <span
                    data-yoo-vertical-menu=""
                  >
                    Title
                  </span>
                  
                </div>
              </a>
              <a
                data-yoo-vertical-menu=""
              >
                <div
                  attr-layout="row"
                  class="item active"
                  data-yoo-vertical-menu=""
                >
                  <img
                    data-yoo-vertical-menu=""
                    src="./assets/grid/empty-state-1.svg"
                  />
                  
                  <span
                    data-yoo-vertical-menu=""
                  >
                    Title Ter
                  </span>
                  
                </div>
              </a>
            </div>
          </div>
        </div>
        <div
          class="row"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item"
              data-yoo-vertical-menu=""
            >
              
              <span
                data-yoo-vertical-menu=""
              >
                Title
              </span>
              
            </div>
          </a>
        </div>
        <div
          class="row hidden"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item"
              data-yoo-vertical-menu=""
            >
              
              <span
                data-yoo-vertical-menu=""
              >
                Title
              </span>
              <i
                class="yo-arrow-dropdown"
                data-yoo-vertical-menu=""
              />
            </div>
          </a>
          <div
            class="sub-container"
            data-yoo-vertical-menu=""
          >
            <div
              class="row-subitems"
              data-yoo-vertical-menu=""
            >
              <a
                data-yoo-vertical-menu=""
              >
                <div
                  attr-layout="row"
                  class="item"
                  data-yoo-vertical-menu=""
                >
                  
                  <span
                    data-yoo-vertical-menu=""
                  >
                    Title
                  </span>
                  
                </div>
              </a>
              <a
                data-yoo-vertical-menu=""
              >
                <div
                  attr-layout="row"
                  class="item"
                  data-yoo-vertical-menu=""
                >
                  
                  <span
                    data-yoo-vertical-menu=""
                  >
                    Title
                  </span>
                  
                </div>
              </a>
              <a
                data-yoo-vertical-menu=""
              >
                <div
                  attr-layout="row"
                  class="item"
                  data-yoo-vertical-menu=""
                >
                  
                  <span
                    data-yoo-vertical-menu=""
                  >
                    Title
                  </span>
                  
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </yoo-slim-scroll>
  </div>
</yoo-vertical-menu>
`;

exports[`YooVerticalMenuComponent Rendering Should render with a fixed display 1`] = `
<yoo-vertical-menu
  class="fixed hydrated"
  data-yoo-vertical-menu-host=""
  fixed="true"
>
  <!---->
  <div
    attr-layout="column"
    class="fixed-container"
    data-yoo-vertical-menu=""
  >
    <div
      class="menu-header"
      data-yoo-vertical-menu=""
    >
      <span
        data-yoo-vertical-menu=""
      >
        Menu
      </span>
      <div
        class="header-slot"
        data-yoo-vertical-menu=""
        data-yoo-vertical-menu-slot=""
      />
    </div>
    <yoo-slim-scroll
      data-yoo-vertical-menu=""
    >
      <div
        data-yoo-vertical-menu=""
      >
        <div
          class="row"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item"
              data-yoo-vertical-menu=""
            >
              
              <span
                data-yoo-vertical-menu=""
              >
                Title
              </span>
              
            </div>
          </a>
        </div>
      </div>
    </yoo-slim-scroll>
  </div>
</yoo-vertical-menu>
`;

exports[`YooVerticalMenuComponent Rendering Should render with a prop title 1`] = `
<yoo-vertical-menu
  class="fixed hydrated"
  data-yoo-vertical-menu-host=""
  title="My Menu"
>
  <!---->
  <div
    attr-layout="column"
    class="fixed-container"
    data-yoo-vertical-menu=""
  >
    <div
      class="menu-header"
      data-yoo-vertical-menu=""
    >
      <span
        data-yoo-vertical-menu=""
      >
        Menu
      </span>
      <div
        class="header-slot"
        data-yoo-vertical-menu=""
        data-yoo-vertical-menu-slot=""
      />
    </div>
    <yoo-slim-scroll
      data-yoo-vertical-menu=""
    >
      <div
        data-yoo-vertical-menu=""
      >
        <div
          class="row"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item"
              data-yoo-vertical-menu=""
            >
              
              <span
                data-yoo-vertical-menu=""
              >
                Title
              </span>
              
            </div>
          </a>
        </div>
      </div>
    </yoo-slim-scroll>
  </div>
</yoo-vertical-menu>
`;

exports[`YooVerticalMenuComponent Rendering Should render with only one Title 1`] = `
<yoo-vertical-menu
  class="fixed hydrated"
  data-yoo-vertical-menu-host=""
>
  <!---->
  <div
    attr-layout="column"
    class="fixed-container"
    data-yoo-vertical-menu=""
  >
    <div
      class="menu-header"
      data-yoo-vertical-menu=""
    >
      <span
        data-yoo-vertical-menu=""
      >
        Menu
      </span>
      <div
        class="header-slot"
        data-yoo-vertical-menu=""
        data-yoo-vertical-menu-slot=""
      />
    </div>
    <yoo-slim-scroll
      data-yoo-vertical-menu=""
    >
      <div
        data-yoo-vertical-menu=""
      >
        <div
          class="row"
          data-yoo-vertical-menu=""
        >
          <a
            data-yoo-vertical-menu=""
          >
            <div
              attr-layout="row"
              class="item"
              data-yoo-vertical-menu=""
            >
              
              <span
                data-yoo-vertical-menu=""
              >
                Title
              </span>
              
            </div>
          </a>
        </div>
      </div>
    </yoo-slim-scroll>
  </div>
</yoo-vertical-menu>
`;
